k8s/65-prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: mlsysbook
spec:
  selector: {app: prometheus}
  ports: [{port: 9090, targetPort: 9090}]
